ho aggiunto un quadrato e dello style

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,8 @@
     <title>Corso Java</title>
 </head>
 <body>
-    <h1>helloworld</h1>
+    <div class="main-container">
+        
+    </div>
 </body>
 </html>
