--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,8 @@
     </div>
     <h2>Ciao Sono Niccolò</h2>
     <h3>Valeria sei stata hackerata</h3>
-    <h1>VI CANCELLO TUTTOOOO</h1>
+    <div class="example">
+        <h1>VI CANCELLO TUTTOOOO</h1>
+        </div>
 </body>
 </html>
