--- a/html/index.html
+++ b/html/index.html
@@ -13,8 +13,8 @@
     </div>
     <h2>Ciao Sono Niccolò</h2>
     <h3>Valeria sei stata hackerata</h3>
-    <div class="example">
-        <h1>VI CANCELLO TUTTOOOO</h1>
-        </div>
+    <div class="bordino">
+    VI CANCELLO TUTTOOOO
+    </div>
 </body>
 </html>
