--- a/html/index.html
+++ b/html/index.html
@@ -13,8 +13,10 @@
     </div>
     <h2>Ciao Sono Niccolò</h2>
     <h3>Valeria sei stata hackerata</h3>
-    <div class="bordino">
-    VI CANCELLO TUTTOOOO
-    </div>
+    <nav>
+        <ul>
+            <li>prova</li>
+        </ul>
+    </nav>
 </body>
 </html>
